--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,12 +15,15 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 set -g allow-passthrough on
 
-# Hyperlinks
-set -ga terminal-features "*:hyperlinks"
-# TODO open in vim https://gist.github.com/charlietran/43639b0f4e0a01c7c20df8f1929b76f2
-
 # Italics
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
+# Hyperlinks
+# set -ga terminal-features "*:hyperlinks"
+set-option -sa terminal-features ",*:hyperlinks"
+set-option -sa terminal-features ",*:sixel"
+# TODO open in vim https://gist.github.com/charlietran/43639b0f4e0a01c7c20df8f1929b76f2
+
 
 set-window-option -g mode-keys vi
 
@@ -64,6 +67,8 @@ set -g @prefix_highlight_show_sync_mode 'on'
 # switch to vim, or fish if can't find vim
 # see: ~/bin/iterm-semantic-vim.sh
 bind-key V run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},vim}" | head -n1) || tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},fish}" | head -n1)'
+# switch to vim if possible, or don't switch
+bind-key M run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},vim}" | head -n1) || true'
 
 # GOALS:
 #  - In no mode, double click copies word, triple copies line
@@ -156,7 +161,8 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# Revert to tmux-plugins/ once https://github.com/tmux-plugins/tmux-continuum/pull/132 merged
+set -g @plugin 'rmartine-ias/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
