--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set-window-option -g mode-keys vi
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
-set -g focus-events on
+set -g focus-events off
 
 # re-number windows when one is closed
 set -g renumber-windows on
@@ -69,6 +69,12 @@ set -g @prefix_highlight_show_sync_mode 'on'
 bind-key V run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},vim}" | head -n1) || tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},fish}" | head -n1)'
 # switch to vim if possible, or don't switch
 bind-key M run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},vim}" | head -n1) || true'
+
+# switch to fish
+bind-key F run-shell 'tmux select-pane -t $(tmux list-panes -F "##{pane_id}" -f "##{==:##{pane_current_command},fish}" | head -n1)'
+
+# Rename session to current directory of current pane
+bind-key R run-shell 'tmux rename-session $(basename #{pane_current_path})'
 
 # GOALS:
 #  - In no mode, double click copies word, triple copies line
@@ -154,13 +160,13 @@ bind-key -n TripleClick1Pane \
 
 
 
-# List of plugins
+# # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Revert to tmux-plugins/ once https://github.com/tmux-plugins/tmux-continuum/pull/132 merged
 set -g @plugin 'rmartine-ias/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
@@ -186,6 +192,9 @@ source-file ~/.config/tmux/tokyonight_day.tmux
 
 set -g status-left "#[fg=#e9e9ed,bg=#2e7de9,bold] #S #[fg=#2e7de9,bg=#e9e9ec,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=#e9e9ec,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#e9e9ec] #{prefix_highlight} #[fg=#a8aecb,bg=#e9e9ec,nobold,nounderscore,noitalics]#[fg=#2e7de9,bg=#a8aecb] Solar day: #(sundial --city Denver)  #(ddate +\"%%{%%d %%b, %%Y%%}%%N: %%H\")  %Y-%m-%d  %-I:%M %p #[fg=#2e7de9,bg=#a8aecb,nobold,nounderscore,noitalics]#[fg=#e9e9ed,bg=#2e7de9,bold] #(whoami) "
+
+# https://github.com/tmux-plugins/tmux-sensible/issues/74
+set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 set -g allow-passthrough on
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
