--- a/git/pre-commit-config-work.yaml
+++ b/git/pre-commit-config-work.yaml
@@ -7,12 +7,12 @@
 default_stages: [pre-commit]
 repos:
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.18.1
+    rev: v8.18.4
     hooks:
       - id: gitleaks
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -24,14 +24,14 @@ repos:
       - id: end-of-file-fixer
         exclude: ^vendor/
       - id: trailing-whitespace
-        exclude: ^vendor/
+        exclude: '^(vendor/)|(.*\.ambr$)|^(patches/)'
       - id: no-commit-to-branch  # default: master,main
       # syntax verifiers
       - id: check-json
       - id: check-toml
       - id: check-xml
       - id: check-yaml
-        exclude: '^(chart)|(charts)/'
+        exclude: '^(chart)|(charts)|(templates)|(tests/data)/'
         args: ['--allow-multiple-documents']
 
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
