--- a/git/pre-commit-config.yaml
+++ b/git/pre-commit-config.yaml
@@ -7,12 +7,12 @@
 default_stages: [pre-commit]
 repos:
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.18.1
+    rev: v8.18.4
     hooks:
       - id: gitleaks
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -37,7 +37,7 @@ repos:
     rev: 3.0.0
     hooks:
       - id: forbid-binary
-        exclude: '^(.git-crypt\/)|(vendor\/)|(charts\/.*.tgz)|(docs\/.*.png)'
+        exclude: '^(.git-crypt\/)|(vendor\/)|(charts\/.*.tgz)|(docs\/.*.png)|(assets\/)'
 
   - repo: https://github.com/hugoh/pre-commit-fish.git
     rev: v1.2
