--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -78,6 +78,25 @@
 		path=\"$(grealpath --relative-to=\"$gitRoot\" \"${1:-$PWD}\")\"; \
 		open \"${baseURL}/tree/${branch}/${path}${2:+#L$2}${3:+-L$3}\"; \
 	}; f"
+	# Open file ($1) in GitHub, optionally from line $2 to $3.
+	blamehub = "!f() { \
+		if git remote get-url upstream >/dev/null 2>&1; then \
+			baseURL=\"$(git ls-remote --get-url upstream)\"; \
+		else \
+			baseURL=\"$(git ls-remote --get-url)\"; \
+		fi; \
+		baseURL=\"$(echo \"$baseURL\" \
+			| sed '/^http/! s|.*:\\(.*\\)$|https://github.com/\\1|' \
+			| sed 's|\\.git$||'; \
+		)\"; \
+		branch=\"$(git default-branch)\"; \
+		remoteMainBranch=\"$(git branch -r | grep -o 'HEAD -> .*$' | cut -d'/' -f2)\"; \
+		git branch -r | grep -q \"$branch\" || branch=\"$remoteMainBranch\"; \
+		gitRoot=\"$(git rev-parse --show-toplevel)\"; \
+		cd -- ${GIT_PREFIX:-.}; \
+		path=\"$(grealpath --relative-to=\"$gitRoot\" \"${1:-$PWD}\")\"; \
+		open \"${baseURL}/blame/${branch}/${path}${2:+#L$2}${3:+-L$3}\"; \
+	}; f"
 	change-email = "git-filter-repo --email-callback 'return email.replace(b\"${1:-}\", b\"${2:-}\")'"
 	whoami = "!f() { \
 		echo \"email: $(git config --get-all user.email)\"; \
