--- a/shellcheck/.shellcheckrc
+++ b/shellcheck/.shellcheckrc
@@ -1,7 +1,7 @@
 external-sources=true
 
-enable=add-default-case
-enable=avoid-nullary-conditions
-enable=check-extra-masked-returns
-enable=check-set-e-suppressed
-enable=deprecate-which
+# enable=add-default-case
+# enable=avoid-nullary-conditions
+# enable=check-extra-masked-returns
+# enable=check-set-e-suppressed
+# enable=deprecate-which
