--- a/yamllint_config.yaml
+++ b/yamllint_config.yaml
@@ -1,5 +1,5 @@
 extends: default
-
+ignore-from-file: .gitignore
 # https://yamllint.readthedocs.io/en/stable/rules.html
 # https://github.com/ContainerSolutions/kubernetes-examples/blob/master/.yamllint
 rules:
@@ -20,6 +20,7 @@ rules:
   indentation: enable
   key-duplicates: enable
   line-length: disable
+  truthy: disable
   # braces:
     # min-spaces-inside: 1
     # max-spaces-inside: 1
